force-app/main/default/objects/Data_Display_Authorizations__c/Data_Display_Authorizations__c.object-meta.xml
<CustomObject>
    <label>Data Display Authorizations</label>
    <nameField>
        <displayFormat>DA-{00000000}</displayFormat>
        <label>Data Display Authorizations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Display Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>