force-app/main/default/objects/Data_Display_Authorizations__c/fields/Initial_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Review_Date__c</fullName>
    <label>Initial Review Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>