force-app/main/default/objects/Data_Display_Authorizations__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Routine Website Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>