force-app/main/default/objects/Data_Display_Authorizations__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Data Display Authorizations</relationshipLabel>
    <relationshipName>Data_Display_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>