force-app/main/default/objects/Data_Display_Authorizations__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>