force-app/main/default/objects/Data_Display_Authorizations__c/validationRules/ReasonDeniedRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonDeniedRule</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Status__c , &apos;Denied &apos;)&amp;&amp; ISNULL(Reason_Denied__c  ),true,false  )</errorConditionFormula>
    <errorDisplayField>Reason_Denied__c</errorDisplayField>
    <errorMessage>Please provide the denied reason</errorMessage>
</ValidationRule>